# artis-arkdata

./: package.json
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/resources/: icons.txt
src-tauri/src/: main.rs  types.rs
src-tauri/src/commands/: data.rs  mod.rs  scraping.rs  validation.rs
src-tauri/src/scrapers/: beacons.rs  colors.rs  common.rs  creatures.rs  engrams.rs  icons.rs  items.rs  mod.rs  progress.rs
src-tauri/src/types/: history.rs
src/app/: layout.jsx  page.jsx
src/components/: BeaconsTab.jsx  BulkOperationsBar.jsx  CollapsibleCard.jsx  ColorsTab.jsx  ComparisonActions.jsx  ComparisonFilters.jsx  ComparisonStats.jsx  CreaturesTab.jsx  DataComparison.jsx  DataControls.jsx  DataEntryForm.jsx  DataTabs.jsx  EngramsTab.jsx  Header.jsx  HistoryToolbar.jsx  IconsTab.jsx  ItemsTab.jsx  ScrapingProgress.jsx  VirtualizedDataTable.jsx
src/hooks/: useContextMenu.js
src/store/: arkStore.js  bulkOperationsStore.js
src/styles/: globals.css
src/utils/: compareData.js  dataUtils.js
