[package]
name = "app"
version = "0.0.1"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
default-run = "app"
edition = "2021"
rust-version = "1.60"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5.4", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.7.2", features = [ "fs-read-dir", "shell-all", "fs-remove-dir", "fs-remove-file", "path-all", "http-all", "fs-create-dir", "fs-write-file", "dialog-save", "clipboard-all", "fs-exists", "fs-copy-file", "dialog-open", "fs-read-file", "window-all", "fs-rename-file"] }
tauri-plugin-context-menu = { git = "https://github.com/c2r0b/tauri-plugin-context-menu", branch = "main" }
reqwest = { version = "0.11", features = ["json"] }
scraper = "0.18"
regex = "1.9"
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = [ "tauri/custom-protocol" ]
